--- a/Code/OrganizationOfData.Windows/OrganizationOfData.Windows.csproj
+++ b/Code/OrganizationOfData.Windows/OrganizationOfData.Windows.csproj
@@ -45,10 +45,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionCommand.cs" />
+    <Compile Include="BulkFileTypeConverter.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="ObservableObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusConverter.cs" />
+    <Compile Include="IntegerValidation.cs" />
     <Compile Include="ViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
