--- a/Code/OrganizationOfData.DesktopClient/OrganizationOfData.DesktopClient.csproj
+++ b/Code/OrganizationOfData.DesktopClient/OrganizationOfData.DesktopClient.csproj
@@ -47,6 +47,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -72,6 +74,7 @@
     <Compile Include="ViewModels\BucketControlViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\NewFileWindowViewModel.cs" />
+    <Compile Include="ViewModels\OverrunZoneControlViewModel.cs" />
     <Compile Include="ViewModels\PrimaryZoneControlViewModel.cs" />
     <Compile Include="ViewModels\RecordControlViewModel.cs" />
     <Compile Include="Views\BucketControl.xaml.cs">
@@ -82,6 +85,9 @@
     </Compile>
     <Compile Include="Views\NewFileWindow.xaml.cs">
       <DependentUpon>NewFileWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\OverrunZoneControl.xaml.cs">
+      <DependentUpon>OverrunZoneControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\PrimaryZoneControl.xaml.cs">
       <DependentUpon>PrimaryZoneControl.xaml</DependentUpon>
@@ -126,6 +132,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\NewFileWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\OverrunZoneControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
