--- a/Code/OrganizationOfData.Windows/OrganizationOfData.Windows.csproj
+++ b/Code/OrganizationOfData.Windows/OrganizationOfData.Windows.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusConverter.cs" />
     <Compile Include="IntegerValidation.cs" />
+    <Compile Include="TransformationMethodConverter.cs" />
     <Compile Include="ViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
