--- a/Code/OrganizationOfData.DesktopClient/OrganizationOfData.DesktopClient.csproj
+++ b/Code/OrganizationOfData.DesktopClient/OrganizationOfData.DesktopClient.csproj
@@ -77,6 +77,9 @@
     <Compile Include="ViewModels\OverrunZoneControlViewModel.cs" />
     <Compile Include="ViewModels\PrimaryZoneControlViewModel.cs" />
     <Compile Include="ViewModels\RecordControlViewModel.cs" />
+    <Compile Include="Views\AuthorsWindow.xaml.cs">
+      <DependentUpon>AuthorsWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\BucketControl.xaml.cs">
       <DependentUpon>BucketControl.xaml</DependentUpon>
     </Compile>
@@ -123,6 +126,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Views\AuthorsWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\BucketControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
