--- a/Code/OrganizationOfData.Data/OrganizationOfData.Data.csproj
+++ b/Code/OrganizationOfData.Data/OrganizationOfData.Data.csproj
@@ -47,7 +47,7 @@
     <Compile Include="BulkFileWithSerialOverrunZone.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Serializator.cs" />
+    <Compile Include="BusinessContext.cs" />
     <Compile Include="Record.cs" />
   </ItemGroup>
   <ItemGroup>
