--- a/Code/OrganizationOfData.DesktopClient/OrganizationOfData.DesktopClient.csproj
+++ b/Code/OrganizationOfData.DesktopClient/OrganizationOfData.DesktopClient.csproj
@@ -86,6 +86,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ViewModels\AuthorsWindowViewModel.cs" />
     <Compile Include="ViewModels\BucketControlViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\NewFileWindowViewModel.cs" />
