organizovan kod, izmenjen dialog service, dodat file service i promenjeni dialozi da pocrni

--- a/Code/OrganizationOfData.Windows/OrganizationOfData.Windows.csproj
+++ b/Code/OrganizationOfData.Windows/OrganizationOfData.Windows.csproj
@@ -46,6 +46,13 @@
   <ItemGroup>
     <Compile Include="ActionCommand.cs" />
     <Compile Include="BulkFileTypeConverter.cs" />
+    <Compile Include="DialogCloseRequestedEventArgs.cs" />
+    <Compile Include="DialogService.cs" />
+    <Compile Include="FileDialogService.cs" />
+    <Compile Include="IDialog.cs" />
+    <Compile Include="IDialogRequestClose.cs" />
+    <Compile Include="IDialogService.cs" />
+    <Compile Include="IFileDialogService.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="ObservableObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
