--- a/Code/OrganizationOfData.DesktopClient/OrganizationOfData.DesktopClient.csproj
+++ b/Code/OrganizationOfData.DesktopClient/OrganizationOfData.DesktopClient.csproj
@@ -57,9 +57,6 @@
     <Reference Include="MaterialDesignThemes.Wpf">
       <HintPath>..\..\Dependecies\MaterialDesignThemes.Wpf.dll</HintPath>
     </Reference>
-    <Reference Include="MvvmDialogs">
-      <HintPath>..\..\Dependecies\MvvmDialogs.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -93,6 +90,7 @@
     <Compile Include="ViewModels\OverrunZoneControlViewModel.cs" />
     <Compile Include="ViewModels\PrimaryZoneControlViewModel.cs" />
     <Compile Include="ViewModels\RecordControlViewModel.cs" />
+    <Compile Include="ViewModels\ZoneControlViewModel.cs" />
     <Compile Include="Views\AuthorsWindow.xaml.cs">
       <DependentUpon>AuthorsWindow.xaml</DependentUpon>
     </Compile>
