--- a/Code/OrganizationOfData.Data/OrganizationOfData.Data.csproj
+++ b/Code/OrganizationOfData.Data/OrganizationOfData.Data.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,6 +46,8 @@
     <Compile Include="Bucket.cs" />
     <Compile Include="BulkFile.cs" />
     <Compile Include="BulkFileWithSerialOverrunZone.cs" />
+    <Compile Include="KeyTransformations.cs" />
+    <Compile Include="NewRecordSimulation.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BusinessContext.cs" />
