--- a/Code/OrganizationOfData.DesktopClient/OrganizationOfData.DesktopClient.csproj
+++ b/Code/OrganizationOfData.DesktopClient/OrganizationOfData.DesktopClient.csproj
@@ -85,8 +85,12 @@
     </Compile>
     <Compile Include="ViewModels\AuthorsWindowViewModel.cs" />
     <Compile Include="ViewModels\BucketControlViewModel.cs" />
+    <Compile Include="ViewModels\DeleteRecordDialogViewModel.cs" />
+    <Compile Include="ViewModels\EditRecordDialogViewModel.cs" />
+    <Compile Include="ViewModels\FindRecordDialogViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\NewFileWindowViewModel.cs" />
+    <Compile Include="ViewModels\NewRecordDialogViewModel.cs" />
     <Compile Include="ViewModels\OverrunZoneControlViewModel.cs" />
     <Compile Include="ViewModels\PrimaryZoneControlViewModel.cs" />
     <Compile Include="ViewModels\RecordControlViewModel.cs" />
@@ -97,11 +101,23 @@
     <Compile Include="Views\BucketControl.xaml.cs">
       <DependentUpon>BucketControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\DeleteRecordDialog.xaml.cs">
+      <DependentUpon>DeleteRecordDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\EditRecordDialog.xaml.cs">
+      <DependentUpon>EditRecordDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\FindRecordDialog.xaml.cs">
+      <DependentUpon>FindRecordDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\NewFileWindow.xaml.cs">
       <DependentUpon>NewFileWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NewRecordDialog.xaml.cs">
+      <DependentUpon>NewRecordDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\OverrunZoneControl.xaml.cs">
       <DependentUpon>OverrunZoneControl.xaml</DependentUpon>
@@ -148,11 +164,27 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\DeleteRecordDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\EditRecordDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\FindRecordDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\NewFileWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\NewRecordDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
