--- a/Code/OrganizationOfData.DesktopClient/OrganizationOfData.DesktopClient.csproj
+++ b/Code/OrganizationOfData.DesktopClient/OrganizationOfData.DesktopClient.csproj
@@ -224,5 +224,11 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\peca.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\mikec.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
