--- a/Code/OrganizationOfData.Data/OrganizationOfData.Data.csproj
+++ b/Code/OrganizationOfData.Data/OrganizationOfData.Data.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bucket.cs" />
+    <Compile Include="BucketPointer.cs" />
     <Compile Include="BulkFile.cs" />
     <Compile Include="BulkFileWithSerialOverrunZone.cs" />
     <Compile Include="KeyTransformations.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BusinessContext.cs" />
     <Compile Include="Record.cs" />
+    <Compile Include="RecordPointer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OrganizationOfData.Windows\OrganizationOfData.Windows.csproj">
