--- a/Code/OrganizationOfData.DesktopClient/OrganizationOfData.DesktopClient.csproj
+++ b/Code/OrganizationOfData.DesktopClient/OrganizationOfData.DesktopClient.csproj
@@ -88,13 +88,13 @@
     <Compile Include="ViewModels\BucketMemoryControlViewModel.cs" />
     <Compile Include="ViewModels\DeleteRecordDialogViewModel.cs" />
     <Compile Include="ViewModels\EditRecordDialogViewModel.cs" />
-    <Compile Include="ViewModels\FindRecordDialogViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\NewFileWindowViewModel.cs" />
     <Compile Include="ViewModels\NewRecordDialogViewModel.cs" />
     <Compile Include="ViewModels\OverrunZoneControlViewModel.cs" />
     <Compile Include="ViewModels\PrimaryZoneControlViewModel.cs" />
     <Compile Include="ViewModels\RecordControlViewModel.cs" />
+    <Compile Include="ViewModels\SimpleMessageDialogViewModel.cs" />
     <Compile Include="ViewModels\ZoneControlViewModel.cs" />
     <Compile Include="Views\AuthorsWindow.xaml.cs">
       <DependentUpon>AuthorsWindow.xaml</DependentUpon>
@@ -110,9 +110,6 @@
     </Compile>
     <Compile Include="Views\EditRecordDialog.xaml.cs">
       <DependentUpon>EditRecordDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\FindRecordDialog.xaml.cs">
-      <DependentUpon>FindRecordDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -131,6 +128,9 @@
     </Compile>
     <Compile Include="Views\RecordControl.xaml.cs">
       <DependentUpon>RecordControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SimpleMessageDialog.xaml.cs">
+      <DependentUpon>SimpleMessageDialog.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -180,10 +180,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\FindRecordDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Views\MainWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -205,6 +201,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\RecordControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SimpleMessageDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
