--- a/Code/OrganizationOfData.Windows/OrganizationOfData.Windows.csproj
+++ b/Code/OrganizationOfData.Windows/OrganizationOfData.Windows.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionCommand.cs" />
-    <Compile Include="BulkFileTypeConverter.cs" />
+    <Compile Include="Copy.cs" />
     <Compile Include="DialogCloseRequestedEventArgs.cs" />
     <Compile Include="DialogService.cs" />
     <Compile Include="EmptyValueConverter.cs" />
@@ -55,6 +55,8 @@
     <Compile Include="IDialogRequestClose.cs" />
     <Compile Include="IDialogService.cs" />
     <Compile Include="IFileDialogService.cs" />
+    <Compile Include="InverseBooleanConverter.cs" />
+    <Compile Include="KeyTransformations.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="ObservableObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
