--- a/Code/OrganizationOfData.Data/OrganizationOfData.Data.csproj
+++ b/Code/OrganizationOfData.Data/OrganizationOfData.Data.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -44,22 +45,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bucket.cs" />
-    <Compile Include="BucketPointer.cs" />
     <Compile Include="BulkFile.cs" />
-    <Compile Include="BulkFilePrimaryOverrunZone.cs" />
-    <Compile Include="BulkFileWithSerialOverrunZone.cs" />
-    <Compile Include="DeleteRecordPointerSimulation.cs" />
     <Compile Include="DeleteRecordSimulation.cs" />
-    <Compile Include="EditRecordPointerSimulation.cs" />
     <Compile Include="EditRecordSimulation.cs" />
-    <Compile Include="KeyTransformations.cs" />
-    <Compile Include="NewRecordPointerSimulation.cs" />
     <Compile Include="NewRecordSimulation.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BusinessContext.cs" />
     <Compile Include="Record.cs" />
-    <Compile Include="RecordPointer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OrganizationOfData.Windows\OrganizationOfData.Windows.csproj">
